--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "production": "next build && next start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "next": "12.0.7",
+    "qs": "^6.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.5",
+    "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
