--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "qs": "^6.10.2",
     "react": "17.0.2",
@@ -18,9 +19,10 @@
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.5",
+    "@types/node": "^17.0.8",
     "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "8.6.0",
