--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "cookie": "^0.4.1",
     "moment": "^2.29.1",
     "next": "12.0.7",
     "qs": "^6.10.2",
@@ -19,6 +20,7 @@
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/node": "^17.0.8",
     "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
